--- a/views/contact-us.ejs
+++ b/views/contact-us.ejs
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../../static/styles/partials/contact-us.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -18,48 +21,68 @@
           <div class="contact-us-page">
             <!-- Send message-column -->
             <div class="contact-us-send-msg">
-              <div class="contact-us-send-msg-heading">
-                Send us a message
-              </div>
+              <div class="contact-us-send-msg-heading">Send us a message</div>
               <!-- Contact us form -->
               <div class="contact-us-message-form">
-                <input type="text" placeholder="Name" required="True" class="contact-us-message-form-Name contact-us-message-form-option">
-                <input type="email" placeholder="Email" required="True" class="contact-us-message-form-Email contact-us-message-form-option">
-                <input type="text" placeholder="Subject" required="True" class="contact-us-message-form-Subject contact-us-message-form-option">
-                <textarea name="message" placeholder="Message" required="True" class="contact-us-message-form-option contact-us-message-form-Message " cols="20" rows="4" ></textarea>
+                <input
+                  type="text"
+                  placeholder="Name"
+                  required="True"
+                  class="contact-us-message-form-Name contact-us-message-form-option"
+                />
+                <input
+                  type="email"
+                  placeholder="Email"
+                  required="True"
+                  class="contact-us-message-form-Email contact-us-message-form-option"
+                />
+                <input
+                  type="text"
+                  placeholder="Subject"
+                  required="True"
+                  class="contact-us-message-form-Subject contact-us-message-form-option"
+                />
+                <textarea
+                  name="message"
+                  placeholder="Message"
+                  required="True"
+                  class="contact-us-message-form-option contact-us-message-form-Message"
+                  cols="20"
+                  rows="4"
+                ></textarea>
 
-                <div >
-                  <input type="submit" value="Send Message" class="contact-us-message-form-button">
-  
+                <div>
+                  <input
+                    type="submit"
+                    value="Send Message"
+                    class="contact-us-message-form-button"
+                  />
                 </div>
-                 
-
               </div>
-              
             </div>
             <!-- Contact deatails-column -->
             <div class="contact-us-details">
               <div class="contact-us-details-heading">
                 <!-- heading -->
-                <div class="contact-us-details-main-heading">
-                  Contact us
-                </div>
+                <div class="contact-us-details-main-heading">Contact us</div>
                 <!-- sub-heading -->
                 <div class="contact-us-details-sub-heading">
                   We're open for any suggestion or just to have a chat
                 </div>
                 <!-- Adress info -->
-                <div class="contact-us-details-address contact-us-details-info"> 
+                <div class="contact-us-details-address contact-us-details-info">
                   <div class="contact-us-details-social-icons">
                     <i class="fa-solid fa-location-dot fa-lg"></i>
                   </div>
-                  <div class="contact-us-details-topic-address contact-us-details-topic ">
-                    <div class="contact-us-details-topic-head-address contact-us-details-topic-head">
+                  <div
+                    class="contact-us-details-topic-address contact-us-details-topic"
+                  >
+                    <div
+                      class="contact-us-details-topic-head-address contact-us-details-topic-head"
+                    >
                       Address:
                     </div>
-                  
-                      198 West 21th Street, Suite 721 New York NY 10016
-                    
+                    XYZ Street, X Building Y Block -123456
                   </div>
                 </div>
                 <!-- Phone info -->
@@ -68,12 +91,8 @@
                     <i class="fa-solid fa-phone fa-lg"></i>
                   </div>
                   <div class="contact-us-details-topic">
-                    <div class="contact-us-details-topic-head">
-                      Phone:
-                    </div>
-                    <div class="contact-us-details-topic-value">
-                      1234567890
-                    </div>
+                    <div class="contact-us-details-topic-head">Phone:</div>
+                    <div class="contact-us-details-topic-value">1234567890</div>
                   </div>
                 </div>
                 <!-- Email info -->
@@ -82,9 +101,7 @@
                     <i class="fa-solid fa-envelope fa-lg"></i>
                   </div>
                   <div class="contact-us-details-topic">
-                    <div class="contact-us-details-topic-head">
-                      Email:
-                    </div>
+                    <div class="contact-us-details-topic-head">Email:</div>
                     <div class="contact-us-details-topic-value">
                       abc123@gmail.com
                     </div>
@@ -96,9 +113,7 @@
                     <i class="fa-solid fa-globe fa-lg"></i>
                   </div>
                   <div class="contact-us-details-topic">
-                    <div class="contact-us-details-topic-head">
-                      Website:
-                    </div>
+                    <div class="contact-us-details-topic-head">Website:</div>
                     <div class="contact-us-details-topic-value">
                       www.abc123.com
                     </div>
@@ -112,5 +127,3 @@
     </main>
   </body>
 </html>
-
-
