--- a/views/partials/blog/blog-feature.ejs
+++ b/views/partials/blog/blog-feature.ejs
@@ -18,62 +18,90 @@
         </div>
         <div class="blog-text">
           <div class="blog-text-title">
-            10 Best Free AWS Courses for Beginners
+            Roadmap To Learn Coding Online: Beginners Guide
           </div>
           <div class="blog-text-para">
             <p class="para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reprehenderit, maiores corrupti? Ad ipsam ducimus tempore
-              explicabo illo nesciunt aut vitae.
+              Learning programming online can be painful for beginners because
+              there are tons of content available to choose from. Most of the
+              tutorials only claim to be beginner-friendly but they are totally
+              waste and confusing.Everyone has a different style of learning new
+              things and they may prefer one resource to another.
             </p>
           </div>
 
           <div class="blog-button">
-            <button class="blog-btn">Read More</button>
+            <button class="blog-btn">
+              <a
+                href="https://holycoders.com/how-to-learn-coding-online/"
+                target="_blank"
+              >
+                Read More</a
+              >
+            </button>
           </div>
         </div>
       </div>
 
       <div class="blog-cards">
         <div class="blog-image">
-          <img src="../../../static/assets/tech_img.jpg" alt="" />
+          <img src="../../../static/assets/prog_image.jpg" alt="" />
         </div>
         <div class="blog-text">
           <div class="blog-text-title">
-            10 Best Free AWS Courses for Beginners
+            How To Learn Programming The Right Way
           </div>
           <div class="blog-text-para">
             <p class="para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reprehenderit, maiores corrupti? Ad ipsam ducimus tempore
-              explicabo illo nesciunt aut vitae.
+              The high demand for programmers, developers, and data scientists
+              attracted many people to join the field of programming. But, most
+              often, newcomers try to take the fast track through the learning
+              process to land a job faster.The biggest mistake I see new
+              programmers make is focusing on learning syntax instead of
+              learning how to solve problems.
             </p>
           </div>
 
           <div class="blog-button">
-            <button class="blog-btn">Read More</button>
+            <button class="blog-btn">
+              <a
+                href="https://towardsdatascience.com/how-to-learn-programming-the-right-way-d7f87bdc7d6a"
+                target="_blank"
+              >
+                Read More</a
+              >
+            </button>
           </div>
         </div>
       </div>
 
       <div class="blog-cards">
         <div class="blog-image">
-          <img src="../../../static/assets/tech_img.jpg" alt="" />
+          <img src="../../../static/assets/Dev_image.jpg" alt="" />
         </div>
         <div class="blog-text">
           <div class="blog-text-title">
-            10 Best Free AWS Courses for Beginners
+            Everything You Need to Know About a Web Developer
           </div>
           <div class="blog-text-para">
             <p class="para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reprehenderit, maiores corrupti? Ad ipsam ducimus tempore
-              explicabo illo nesciunt aut vitae.
+              If you have ever thought about becoming a Web developer, you came
+              to the right place! Pursuing a new career is a big decision, so it
+              is important to do your research. You need to familiar with some
+              characteristics of a web developer such as good communication
+              skills, Love of learning, Patience,Perfectionism. So, where do you
+              stand?
             </p>
           </div>
 
           <div class="blog-button">
-            <button class="blog-btn">Read More</button>
+            <button class="blog-btn">
+              <a
+                href="https://www.rasmussen.edu/degrees/technology/blog/everything-about-becoming-web-developer/"
+                target="_blank"
+                >Read More</a
+              >
+            </button>
           </div>
         </div>
       </div>
