--- a/views/partials/counselling.ejs
+++ b/views/partials/counselling.ejs
@@ -23,7 +23,7 @@
                 <div class="counselling-row">
                     <div class="counselling-text-container">
                         <div class="counselling-title-small">
-                            <h1>World-class learning</h1>
+                            <h1>World-class Counselling</h1>
                         </div>
                         <br>
                         <p class="counselling-text">Get a promotion, a raise, or switch careers. Of our learners, 89% report career
