--- a/views/partials/feature.ejs
+++ b/views/partials/feature.ejs
@@ -1,131 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../static/styles/partials/main.css" />
-    <link rel="stylesheet" href="../../static/styles/partials/feature.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
-    <title>Document</title>
-  </head>
-  <body>
-    <section class="section feature-section">
-      <div class="container feature-container">
-        <div class="section-title">
-          <h2 class="section-heading">
-            Features That
-            <span class="feature-heading"> &nbsp;Can Avail By Everyone </span>
-          </h2>
-          <p class="section-para">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-            laudantium sint tenetur earum non veritatis itaque rem minus. Rerum,
-            illum. Dicta deleniti odit voluptate libero? Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Aperiam laudantium sint tenetur
-            earum non veritatis itaque rem minus. Rerum, illum. Dicta deleniti
-            odit voluptate libero?
-          </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../../static/styles/partials/main.css" />
+  <link rel="stylesheet" href="../../static/styles/partials/feature.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <title>Document</title>
+</head>
+
+<body>
+  <section class="section feature-section">
+    <div class="container feature-container">
+      <div class="section-title">
+        <h2 class="section-heading">
+          Features That
+          <span class="feature-heading"> &nbsp;Can Avail By Everyone </span>
+        </h2>
+        <p class="section-para">
+          Expand your career opportunities with Codeaon . Turn what you know into opportunity and reach millions around
+          the world. Your attitude , not your aptitude , will determine your altitude .
+        </p>
+      </div>
+      <div class="feature-row">
+        <div class="feature-card">
+          <div class="feature-card-logo">
+            <i class="fa-solid fa-key"></i>
+          </div>
+          <div class="feature-card-header">
+            <h1>Blogs</h1>
+          </div>
+          <div class="feature-card-body">
+            <p>
+              The place where the expert professionals share their own learning experience and interview experiences for the learners. You can share your story too !
+            </p>
+          </div>
         </div>
-        <div class="feature-row">
-          <div class="feature-card">
-            <div class="feature-card-logo">
-              <i class="fa-solid fa-key"></i>
-            </div>
-            <div class="feature-card-header">
-              <h1>Lifetime Access</h1>
-            </div>
-            <div class="feature-card-body">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Temporibus adipisci vel sequi error quas, voluptate minima
-                laboriosam suscipit delectus aliquam!
-              </p>
-            </div>
+        <div class="feature-card">
+          <div class="feature-card-logo">
+            <i class="fa-solid fa-copy"></i>
           </div>
-          <div class="feature-card">
-            <div class="feature-card-logo">
-              <i class="fa-solid fa-copy"></i>
-            </div>
-            <div class="feature-card-header">
-              <h1>Source File Included</h1>
-            </div>
-            <div class="feature-card-body">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Temporibus adipisci vel sequi error quas, voluptate minima
-                laboriosam suscipit delectus aliquam!
-              </p>
-            </div>
+          <div class="feature-card-header">
+            <h1>Source File Included</h1>
           </div>
-          <div class="feature-card">
-            <div class="feature-card-logo">
-              <i class="fa-solid fa-medal"></i>
-            </div>
-            <div class="feature-card-header">
-              <h1>Student Membership</h1>
-            </div>
-            <div class="feature-card-body">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Temporibus adipisci vel sequi error quas, voluptate minima
-                laboriosam suscipit delectus aliquam!
-              </p>
-            </div>
+          <div class="feature-card-body">
+            <p>
+              A Source File is the "master file" for whatever you are working with. You will find the relevant materials from every tutorial in a structured format. We also allow developers to add their best projects to our system through a cloud based AI.
+            </p>
           </div>
-          <div class="feature-card">
-            <div class="feature-card-logo">
-              <i class="fa-solid fa-briefcase"></i>
-            </div>
-            <div class="feature-card-header">
-              <h1>35000+ Courses</h1>
-            </div>
-            <div class="feature-card-body">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Temporibus adipisci vel sequi error quas, voluptate minima
-                laboriosam suscipit delectus aliquam!
-              </p>
-            </div>
+        </div>
+        <div class="feature-card">
+          <div class="feature-card-logo">
+            <i class="fa-solid fa-medal"></i>
           </div>
-          <div class="feature-card">
-            <div class="feature-card-logo">
-              <i class="fa-solid fa-crown"></i>
-            </div>
-            <div class="feature-card-header">
-              <h1>Expert Mentors</h1>
-            </div>
-            <div class="feature-card-body">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Temporibus adipisci vel sequi error quas, voluptate minima
-                laboriosam suscipit delectus aliquam!
-              </p>
-            </div>
+          <div class="feature-card-header">
+            <h1>Student Counselling</h1>
           </div>
-          <div class="feature-card">
-            <div class="feature-card-logo">
-              <i class="fa-solid fa-headset"></i>
-            </div>
-            <div class="feature-card-header">
-              <h1>Live Supports</h1>
-            </div>
-            <div class="feature-card-body">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Temporibus adipisci vel sequi error quas, voluptate minima
-                laboriosam suscipit delectus aliquam!
-              </p>
-            </div>
+          <div class="feature-card-body">
+            <p>
+              We offer direct Counselling to the learners through our network of experienced members and offer them a
+              chance for direct interaction with them through online meetings.
+            </p>
+          </div>
+        </div>
+        <div class="feature-card">
+          <div class="feature-card-logo">
+            <i class="fa-solid fa-briefcase"></i>
+          </div>
+          <div class="feature-card-header">
+            <h1>35000+ Lectures</h1>
+          </div>
+          <div class="feature-card-body">
+            <p>
+             We bring out the best lectures and tutorials for every domain.You will explore the most relevant content on different domains like Android Development , Competitive Programming , Machine Learnig etc. on this platform for a hassle-free learning.
+            </p>
+          </div>
+        </div>
+        <div class="feature-card">
+          <div class="feature-card-logo">
+            <i class="fa-solid fa-crown"></i>
+          </div>
+          <div class="feature-card-header">
+            <h1>Expert Members</h1>
+          </div>
+          <div class="feature-card-body">
+            <p>
+              Expert professionals from every domain have a direct membership with our platform to provide an open guidance and discussions with the learners to attain a happy learning experience.
+            </p>
+          </div>
+        </div>
+        <div class="feature-card">
+          <div class="feature-card-logo">
+            <i class="fa-solid fa-headset"></i>
+          </div>
+          <div class="feature-card-header">
+            <h1>Live Supports</h1>
+          </div>
+          <div class="feature-card-body">
+            <p>
+              We offer 24x7 real time support to the learners through our subject matter experts for doubt clearance and to have a better grasp over the concept.
+            </p>
           </div>
         </div>
       </div>
-    </section>
-  </body>
+    </div>
+  </section>
+</body>
+
 </html>
