--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,107 +9,109 @@
     <link rel="stylesheet" href="../../static/styles/main.css" />
     <link rel="stylesheet" href="../../static/styles/partials/footer.css" />
     <script defer src="https://kit.fontawesome.com/90effeaa2f.js" crossorigin="anonymous"></script>
-    
+
     <title>Document</title>
-  </head>
-  <body>
-     <footer class="section footer-section">
-        
+</head>
+
+<body>
+    <footer class="section footer-section">
+
         <div class="container footer-container">
             <img src="../../static/assets/footerwave.PNG" class="footer-wave" alt="wave">
             <div class="footer-top">
-           
-        <div class="footer-column">
-            <h2 class="footer-heading">Top Products</h2>
-                <ul>
-                    
-                    <li><a href="#">Managed Website</a></li>
-                    <li><a href="#">Manage Reputation</a></li>
-                    <li><a href="#">Power Tools</a></li>
-                    <li><a href="#">Marketing Service</a></li>
-                </ul>
-         </div>
-            
-         
-            <div class="footer-column">
-                <h2 class="footer-heading">Quick Links</h2>
+
+                <div class="footer-column">
+                    <h2 class="footer-heading">Top Tutorials</h2>
                     <ul>
-                        
-                        <li><a href="#">Jobs</a></li>
-                        <li><a href="#">Brand Assets</a></li>
-                        <li><a href="#">Investor Relations</a></li>
+
+                        <li><a href="#">Full Stack Web Development</a></li>
+                        <li><a href="#">Machine learning</a></li>
+                        <li><a href="#">Competitive Programming</a></li>
+                        <li><a href="#">Interview Preparation</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="footer-column">
+                    <h2 class="footer-heading">Quick Links</h2>
+                    <ul>
+
+                        <li><a href="#">Reviews</a></li>
+                        <li><a href="#">Interview Experience</a></li>
+                        <li><a href="#">Contact</a></li>
                         <li><a href="#">Terms of Service</a></li>
 
                     </ul>
+                </div>
+
+
+                <div class="footer-column">
+                    <h2 class="footer-heading">Features</h2>
+                    <ul>
+
+                        <li><a href="#">Live Support System</a></li>
+                        <li><a href="#">Direct Mentorship</a></li>
+                        <li><a href="#">35000+ Lectures</a></li>
+                        <li><a href="#">Community Support</a></li>
+
+
+                    </ul>
+                </div>
+
+
+                <div class="footer-column">
+                    <h2 class="footer-heading">Resources</h2>
+                    <ul>
+
+                        <li><a href="#">Best Tutorials</a></li>
+                        <li><a href="#">Blogs</a></li>
+                        <li><a href="#">Expert Members</a></li>
+                        <li><a href="#">Student Counselling</a></li>
+
+
+
+                    </ul>
+
+                </div>
+
             </div>
+            <div class="footer-copyright-container">
+                <div class="footer-copyright">
+                    <div class="footer-left-text">
+                        <p>Copyright ©2022 All rights reserved</p>
+                    </div>
+                    <div class="footer-icons">
+                        <a href="#" class="footer-social-icon">
+                            <i class="fa-brands fa-facebook-f">
 
+                            </i>
 
-         <div class="footer-column">
-            <h2 class="footer-heading">Features</h2>
-             <ul>
-                
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Brand Assets</a></li>
-                <li><a href="#">Investor Relations</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                
+                        </a>
+                        <a href="#" class="footer-social-icon">
+                            <i class="fa-brands fa-twitter"></i>
 
-             </ul>
-         </div>
+                        </a>
+                        <a href="#" class="footer-social-icon">
+                            <i class="fa-solid fa-basketball">
 
+                            </i>
 
-         <div class="footer-column">
-            <h2 class="footer-heading">Resources</h2>
-            <ul>
-                
-                <li><a href="#">Guides</a></li>
-                <li><a href="#">Research</a></li>
-                <li><a href="#">Experts</a></li>
-                <li><a href="#">Agencies</a></li>
-                
-                
+                        </a>
+                        <a href="#" class="footer-social-icon">
+                            <i class="fa-brands fa-behance"></i>
 
-             </ul>
-         
-         </div>
+                            </i>
 
-         </div>
-          <div class="footer-copyright-container" >
-        <div class="footer-copyright">
-            <div class="footer-left-text">
-                <p>Copyright ©2022 All rights reserved</p>
+                        </a>
+
+                    </div>
+
+                </div>
+
             </div>
-            <div class="footer-icons">
-                <a href="#" class="footer-social-icon">
-                    <i class="fa-brands fa-facebook-f">
-                        
-                    </i>
-                    
-                </a>
-                <a href="#" class="footer-social-icon">
-                    <i class="fa-brands fa-twitter"></i>
-                    
-                </a>
-                <a href="#" class="footer-social-icon">
-                    <i class="fa-solid fa-basketball">
-                        
-                    </i>
-                    
-                </a>
-                <a href="#" class="footer-social-icon">
-                    <i class="fa-brands fa-behance"></i>
-                        
-                    </i>
-                    
-                </a>
-               
-            </div>
-           
         </div>
-        
-    </div>
-    </div>
-    </footer> 
-    
-  </body>
+    </footer>
+
+</body>
+
 </html>
