--- a/views/partials/hero.ejs
+++ b/views/partials/hero.ejs
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../../static/styles/partials/hero.css" />
-    <link rel="stylesheet" href="../../../static/styles/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-  </head>
-  <body>
-    <main>
-      <section class="hero-section section">
-        <!-- Hero section -->
-        <div class="hero-container container">
-          <!-- Text cloumn of the hero section -->
-          <div class="hero-col-text">
-            <div class="hero-heading">Lorem, ipsum dolor sit</div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="../../static/styles/partials/hero.css" />
+  <link rel="stylesheet" href="../../../static/styles/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-            <div class="hero-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
-              explicabo.
-            </div>
-          </div>
+</head>
 
-          <!-- image column of the hero section -->
-          <div class="hero-col-img">
-            <img
-              class="hero-image"
-              src="../../static/assets/codeaon-hero.png"
-            />
+<body>
+  <main>
+    <section class="hero-section section">
+      <!-- Hero section -->
+      <div class="hero-container container">
+        <!-- Text cloumn of the hero section -->
+        <div class="hero-col-text">
+          <div class="hero-heading">Start your Coding Journey with Us !</div>
+
+          <div class="hero-desc">
+            Coding is today's language of creativity . And With Codeaon you can definitely get a chance to become
+            creators instead of consumers of Computer Science.
           </div>
         </div>
-      </section>
-    </main>
-  </body>
+
+        <!-- image column of the hero section -->
+        <div class="hero-col-img">
+          <img class="hero-image" src="../../static/assets/codeaon-hero.png" />
+        </div>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
