--- a/views/partials/testimonial.ejs
+++ b/views/partials/testimonial.ejs
@@ -1,163 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../static/styles/partials/main.css" />
-    <link
-      rel="stylesheet"
-      href="../../static/styles/partials/testimonial.css"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-    <title>Document</title>
-  </head>
-  <body>
-    <section class="testimonial-section">
-      <div class="testimonial-heading">
-        <div class="heading-box">
-          The Highest <span class="left-heading"> Standards </span><br />
-          <div class="sub-heading">
-            The Happiest <span class="left-heading"> Customers</span>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../../static/styles/partials/main.css" />
+  <link rel="stylesheet" href="../../static/styles/partials/testimonial.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+  <title>Document</title>
+</head>
+
+<body>
+  <section class="testimonial-section">
+    <div class="testimonial-heading">
+      <div class="heading-box">
+        The Highest <span class="left-heading"> Standards </span><br />
+        <div class="sub-heading">
+          The Happiest <span class="left-heading"> Customers</span>
+        </div>
+      </div>
+    </div>
+    <div class="slideshow-container">
+      <div class="Slides">
+        <div class="carousel-box">
+          <div class="carousel-text">
+            <div class="carousel-heading">
+              <h3><i>66</i></h3>
+            </div>
+            <p class="carousel-para">
+              Best platform to learn any programming language. Far better than many paid courses.
+              Notes are also available on his website which helps in revising the concepts.
+            </p>
+
+            <div class="carousel-subheading">
+              <h4>Customer</h4>
+              <h5>Chief Executive Amazon</h5>
+            </div>
+          </div>
+
+          <div class="carousel-img">
+            <img src="../../static/assets/image3.jpeg" class="right-image" alt="" />
           </div>
         </div>
       </div>
-      <div class="slideshow-container">
-        <div class="Slides">
-          <div class="carousel-box">
-            <div class="carousel-text">
-              <div class="carousel-heading">
-                <h3><i>66</i></h3>
-              </div>
-              <p class="carousel-para">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Consectetur impedit placeat deleniti a possimus temporibus
-                tempora officiis cum adipisci, asperiores nulla fugit odit
-                inventore? Nemo unde id officia eius culpa.
-              </p>
 
-              <div class="carousel-subheading">
-                <h4>Customer</h4>
-                <h5>Chief Executive Amazon</h5>
-              </div>
+      <div class="Slides">
+        <div class="carousel-box">
+          <div class="carousel-text">
+            <div class="carousel-heading">
+              <h3><i>66</i></h3>
             </div>
 
-            <div class="carousel-img">
-              <img
-                src="../../static/assets/image3.jpeg"
-                class="right-image"
-                alt=""
-              />
+            <p class="carousel-para">
+              The Best thing about this platform is the live support system for the students. It helps a learner to
+              maintain a steady growth during his learning period.
+            </p>
+            <div class="carousel-subheading">
+              <h4>Customer</h4>
+              <h5>Chief Executive Uber</h5>
             </div>
           </div>
-        </div>
 
-        <div class="Slides">
-          <div class="carousel-box">
-            <div class="carousel-text">
-              <div class="carousel-heading">
-                <h3><i>66</i></h3>
-              </div>
-
-              <p class="carousel-para">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Consectetur impedit placeat deleniti a possimus temporibus
-                tempora officiis cum adipisci, asperiores nulla fugit odit
-                inventore? Nemo unde id officia eius culpa.
-              </p>
-              <div class="carousel-subheading">
-                <h4>Customer</h4>
-                <h5>Chief Executive Amazon</h5>
-              </div>
-            </div>
-
-            <div class="carousel-img">
-              <img
-                src="../../static/assets/profile_user.jpg"
-                class="right-image"
-                alt=""
-              />
-            </div>
+          <div class="carousel-img">
+            <img src="../../static/assets/profile_user.jpg" class="right-image" alt="" />
           </div>
         </div>
-
-        <div class="Slides">
-          <div class="carousel-box">
-            <div class="carousel-text">
-              <div class="carousel-heading">
-                <h3><i>66</i></h3>
-              </div>
-
-              <p class="carousel-para">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Consectetur impedit placeat deleniti a possimus temporibus
-                tempora officiis cum adipisci, asperiores nulla fugit odit
-                inventore? Nemo unde id officia eius culpa.
-              </p>
-              <div class="carousel-subheading">
-                <h4>Customer</h4>
-                <h5>Chief Executive Amazon</h5>
-              </div>
-            </div>
-
-            <div class="carousel-img">
-              <img
-                src="../../static/assets/image2.jpeg"
-                class="right-image"
-                alt=""
-              />
-            </div>
-          </div>
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
-      <br />
-    </section>
 
-    <!-- The dots/circles -->
-    <!-- <div class="dot-section">
+      <div class="Slides">
+        <div class="carousel-box">
+          <div class="carousel-text">
+            <div class="carousel-heading">
+              <h3><i>66</i></h3>
+            </div>
+
+            <p class="carousel-para">
+              Codeaon has helped me to filter out the best content from the whole internet and has made my learning
+              experience a smooth one.
+            </p>
+            <div class="carousel-subheading">
+              <h4>Customer</h4>
+              <h5>Chief Executive Google</h5>
+            </div>
+          </div>
+
+          <div class="carousel-img">
+            <img src="../../static/assets/image2.jpeg" class="right-image" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br />
+  </section>
+
+  <!-- The dots/circles -->
+  <!-- <div class="dot-section">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
     </div> -->
 
-    <script>
-      let slideIndex = 1;
-      showSlides(slideIndex);
+  <script>
+    let slideIndex = 1;
+    showSlides(slideIndex);
 
-      // Next/previous controls
-      function plusSlides(n) {
-        showSlides((slideIndex += n));
-      }
+    // Next/previous controls
+    function plusSlides(n) {
+      showSlides((slideIndex += n));
+    }
 
-      // Thumbnail image controls
-      function currentSlide(n) {
-        showSlides((slideIndex = n));
-      }
+    // Thumbnail image controls
+    function currentSlide(n) {
+      showSlides((slideIndex = n));
+    }
 
-      function showSlides(n) {
-        let i;
-        let slides = document.getElementsByClassName("Slides");
-        let dots = document.getElementsByClassName("dot");
-        if (n > slides.length) {
-          slideIndex = 1;
-        }
-        if (n < 1) {
-          slideIndex = slides.length;
-        }
-        for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex - 1].style.display = "block";
-        dots[slideIndex - 1].className += " active";
+    function showSlides(n) {
+      let i;
+      let slides = document.getElementsByClassName("Slides");
+      let dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {
+        slideIndex = 1;
       }
-    </script>
-  </body>
+      if (n < 1) {
+        slideIndex = slides.length;
+      }
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+    }
+  </script>
+</body>
+
 </html>
