--- a/views/partials/feature.ejs
+++ b/views/partials/feature.ejs
@@ -30,7 +30,7 @@
       <div class="feature-row">
         <div class="feature-card">
           <div class="feature-card-logo">
-            <i class="fa-solid fa-key"></i>
+            <i class="fa-solid fa-blog"></i>
           </div>
           <div class="feature-card-header">
             <h1>Blogs</h1>
