--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -28,7 +28,7 @@
                     <li><a href="/contactUs">CONTACT</a></li>
 
                 </ul>
-                <a href="/signup">
+                <a href="/user/signup">
                     <button class="codeaon-navbar-btn">
                         <span class="codeaon-navbar-signup">SIGN UP</span>
                         <i class="fa-solid fa-arrow-right-to-bracket"></i>
