--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
             <div class="signup-container">
                 <div class="screen">
                     <div class="screen__content">
-                        <form class="signup">
+                        <form class="signup" action="/user/signup" method="POST">
                             <div class="signup__field">
                                 <i class="fa-solid fa-address-card"></i>
                                 <input type="text" class="signup__input-name" placeholder="First Name">
@@ -41,7 +41,7 @@
 
                                 <br>
                                 <p>Have an Account?</p>
-                                <a href="/login">Login</a>
+                                <a href="/user/login">Login</a>
 
                             </div>
 
