--- a/static/styles/partials/nav.css
+++ b/static/styles/partials/nav.css
@@ -111,14 +111,42 @@ body {
 .codeaon-navbar-btn {
     display: flex;
     align-items: center;
-    padding: 0.75rem 1.2rem;
-    border-radius: 4px;
+    width: 100px;
+    padding-left: 20px !important;
+    padding: 0.4rem 0rem 0.4rem 0.4rem;
+    border-radius: 10px;
     margin-right: 3rem;
+    position: relative;
     font-size: var(--fs-regular);
     font-weight: var(--fw-bold);
     color: #5427cf;
     cursor: pointer;
+    overflow: hidden;
 }
+
+.codeaon-navbar-btn:hover {
+    width: 105px;
+    padding-right: 10px;
+    background-color: rgb(251, 121, 121);
+    color: #fff;
+}
+
+.codeaon-navbar-btn .fas {
+    margin-left: 5px;
+    opacity: 0;
+    transform: translateX(-50%);
+}
+
+a:link {
+
+    text-decoration: none;
+}
+
+.codeaon-navbar-btn:hover .fas {
+    opacity: 1;
+    transform: translateX(0);
+}
+
 
 .codeaon-navbar-signup {
     margin-right: 5px;
