--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <link rel="stylesheet" href="../../static/styles/main.css">
-    <link rel="stylesheet" href="../../static/styles/partials/nav.css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
 
@@ -30,9 +30,7 @@
                 </ul>
                 <a href="/user/signup">
                     <button class="codeaon-navbar-btn">
-                        <span class="codeaon-navbar-signup">SIGN UP</span>
-                        <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                    </button>
+                        Sign Up <i class="fas fa-arrow-right"></i></button>
                 </a>
             </div>
 
