Add SignUp Animation

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -30,9 +30,7 @@
                 </ul>
                 <a href="/user/signup">
                     <button class="codeaon-navbar-btn">
-                        <span class="codeaon-navbar-signup">SIGN UP</span>
-                        <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                    </button>
+                        Sign Up <i class="fas fa-arrow-right"></i></button>
                 </a>
             </div>
 
